<resources>
    <string name="app_name">taskmaster</string>
    <string name="all_tasks">All Tasks</string>
    <string name="todo">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">Do Something</string>
    <string name="my_task">My Task</string>
    <string name="task_title">Task Title</string>
    <string name="total_tasks_0">Total Tasks: 0</string>
    <string name="submitted_confirmation">Submitted!</string>
    <string name="lorem_ipsum">bh gravida cursus. Curabitur sed commodo purus. Vestibulum vestibulum non justo interdum posuere. Suspendisse gravida pellentesque est sed ornare. Integer dapibus leo id condimentum congue. Proin in hendrerit velit. Nullam tristique lectus erat, ut consectetur lacus consequat ut. Mauris eget magna vulputate, semper felis a, mollis orci. Fusce eu ultrices ipsum. Mauris tortor mauris, vehicula nec pretium eget, consectetur vel massa. Etiam malesuada, turpis eget efficitur luctus, orci justo iaculis lectus, rhoncus pharetra leo mi a dui. Nulla mollis felis aliquet nunc dignissim porttitor.</string>
    <string name="settings">Settings:</string>
    <string name="display_name">Display Name:</string>
    <string name="prompt_name">Name</string>
    <string name="submit">submit</string>
    <string name="my_tasks">My Tasks</string>
    <string name="image_button">settings</string>
    <string name="homework">homework</string>
    <string name="walk_dog">walk dog</string>
    <string name="gym">gym</string>
</resources>